force-app/main/default/objects/Club__c/fields/Club_Count__c.field-meta.xml
<CustomField>
    <fullName>Club_Count__c</fullName>
    <label>Club Count</label>
    <summaryForeignKey>Junction_Club__c.Club__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>