force-app/main/default/objects/Club__c/fields/Club_Size__c.field-meta.xml
<CustomField>
    <fullName>Club_Size__c</fullName>
    <label>Club Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>