force-app/main/default/objects/Club__c/fields/Legacy_Club_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Club_Id__c</fullName>
    <label>Legacy Club Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>