force-app/main/default/objects/Club__c/validationRules/Club_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Club_Filled</fullName>
    <active>true</active>
    <description>Once the club is filled, no other student should be allowed to join</description>
    <errorConditionFormula>Club_Count__c &gt;  Club_Size__c</errorConditionFormula>
    <errorMessage>Club cannot have any other students</errorMessage>
</ValidationRule>